@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-10-29] RFC4880: removed interface CheckMDC() from TMCG_OpenPGP_Message
 * [2018-10-28] RFC4880: include MDC verification in function Decrypt()
 * [2018-10-28] RFC4880: fixes the selected data/packets for computing the MDC
 * [2018-10-25] aiounicast_select: handle error EINTR during call of select
